# dfct-cardano

./: .gitignore  LICENSE  README.md  docker-compose.yml  fetch_config_files.sh
backend/: Dockerfile  integration_test.py  integration_test_governance.py  integration_test_provenance.py  pyproject.toml  pytest.ini
backend/assets/: dfct-governance.plutus  dfct-minting-policy.plutus  dfct-provenance.plutus
backend/dfctbackend/: __init__.py  config.py  main.py  models.py
backend/dfctbackend/api/: router.py
backend/dfctbackend/cardano/: cardano_cli.py  context.py  contract.py  datum.py  governance_contract.py  provenance_contract.py  transaction.py  utils.py  wallet.py
backend/dfctbackend/cardano/contract/: contract.py  datum.py
backend/dfctbackend/cardano/contract/governance/: governance_contract.py  governance_datum.py
backend/dfctbackend/cardano/contract/provenance/: provenance_contract.py  provenance_datum.py
backend/src/: config.py  main.py  models.py
backend/src/api/: router.py
backend/src/cardano/: context.py  contract.py  transaction.py  utils.py  wallet.py
backend/tests/: conftest.py  test_dfct.py  test_governance.py  test_models.py  test_provenance.py
backend/tests/api/: test_router.py
backend/tests/cardano/: test_context.py  test_contract.py  test_transaction.py  test_utils.py  test_wallet.py
smart-contract/: cabal.project  dfct.cabal  generate-deploy-files.sh  generate-keys.sh
smart-contract/app/governance/: CompileGV.hs
smart-contract/app/mint/: CompileMP.hs
smart-contract/app/provenance/: CompilePV.hs
smart-contract/src/DFCT/: Governance.hs  MintingPolicy.hs  Provenance.hs  Types.hs
smart-contract/test/: Contrib.hs  Edge.hs  RewardMinting.hs  Spec.hs  StateTransition.hs  TestContrib.hs  TestEdge.hs  TestFixtures.hs  TestGovernance.hs  TestRewardMinting.hs  TestStateTransition.hs  TestTopic.hs  Topic.hs
