[tool.poetry]
package-mode = false
name = "dfctbackend"
version = "0.1.0"
description = "Backend for DFCT (Decentralized Fact-Checking Toolkit)"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pycardano = "^0.13.2"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
cbor2 = "^5.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"